Add automatic stale job sweeper
